--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             </address>
 
             <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
-                <svg fill="#31d0aa" width="30" height="30">
-                    <use href="./images/icons.svg#icon-email"></use>
+                <svg fill="#2E2F42" width="30" height="30" >
+                    <use href="./images/icons.svg#icon-burger-icon"></use>
                 </svg>
             </button>
 
@@ -53,13 +53,13 @@
 
     <div class="menu-container js-menu-container" id="mobile-menu">
         <button class="modal-close-btn menu-toggle js-close-menu">
-            <svg class="cross-icon" width="8" height="8">
+<svg class="cross-icon" width="8" height="8">
                 <use href="./images/icons.svg#icon-cross"></use>
-            </svg>
+            </svg> 
         </button>
         <ul class="mobile-menu-list">
-            <li class="mobile-menu-list-li"><a class="mobile-menu-list-link" href="">Studio</a> </li>
-            <li class="mobile-menu-list-li"><a class="mobile-menu-list-link" href="">Portfolio</a></li>
+            <li class="mobile-menu-list-li"><a class="mobile-menu-list-link" href="./index.html">Studio</a> </li>
+            <li class="mobile-menu-list-li"><a class="mobile-menu-list-link" href="./portfolio.html">Portfolio</a></li>
             <li class="mobile-menu-list-li "><a href="" class="mobile-menu-list-link-blue">Contacts</a></li>
         </ul>
         <ul class="list mobile-address-list">
@@ -72,7 +72,7 @@
                 </a>
             </li>
         </ul>
-        <ul class="social-list list">
+        <ul class="social-list-mobile list">
 
             <li class="social-list-item">
                 <a href="#" class="social-list-link link">
@@ -489,7 +489,7 @@
 
 
 
-    <!-- <div class="back-drop  is-hidden" data-modal>
+    <div class="back-drop  is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="modal-close-btn" data-modal-close>
                 <svg class="cross-icon" width="8" height="8">
@@ -558,7 +558,7 @@
 
             </form>
 
-        </div> -->
+        </div>
     </div>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
         integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
