--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     </li>
                     <li class="doing-item"><img srcset="./images/phone-pages.jpg 1x, ./images/phone-pages-2x.jpg 2x"
                             src="./images/phone-pages.jpg" alt="phone-pages" width="360"></li>
-                    <li class="doing-item"><img srcset="./images/applications.jpg 1x, ./images/applications-2x.jpg 2x, "
+                    <li class="doing-item"><img srcset="./images/applications.jpg 1x, ./images/applications-2x.jpg 2x"
                             src="./images/applications.jpg" alt="applications" width="360"></li>
                 </ul>
             </div>
