--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <main>
         <section class="hero">
             <div class="container container-hero">
-                <h1 class="hero-title">Effective Solutions for Your Business</h1>
+                <h1 class="hero-title">Effective Solutions For Your Business</h1>
                 <button class="hero-btn" type="button" data-modal-open>Order Service</button>
 
             </div>
@@ -159,9 +159,7 @@
                             </svg>
                         </div>
                         <h3 class="advantages-title">Diligence</h3>
-                        <p class="advantages-descr">Research and confirm brands that present the strongest digital
-                            growth
-                            opportunities and minimize
+                        <p class="advantages-descr">Research and confirm brands that present the strongest digital growth opportunities and minimize
                             risk.</p>
                     </li>
                     <li class="advantages-item">
@@ -171,10 +169,7 @@
                             </svg>
                         </div>
                         <h3 class="advantages-title">Technologies</h3>
-                        <p class="advantages-descr">Design practice focused on digital experiences. We bring forth a
-                            deep
-                            passion for
-                            problem-solving.</p>
+                        <p class="advantages-descr">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                     </li>
                 </ul>
             </div>
